// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The head component for setting document title should render Quick Add page title correctly 1`] = `
<title>
  Dummy product title | Quick Add
</title>
`;

exports[`The head component for setting document title should render default title correctly 1`] = `
<title>
  Dummy product title
</title>
`;
